--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Javascript_8</title>
 </head>
 <body>
-    <section>
+    <section class="section1">
         <div class="slider-wrapper">
 
             <button class="previous" id="previous">
